3 language localization has been added for (admin) route group.
When a unique authentication code is generated, it won't include next letters: "I" (it looks like 1 (one)) and "O" (it is simular as 0 (zero)).

Admin shouldn't click on "Shift" and "-" (hyphen) buttons while inputting a unique generated code from his/her email. Letters are written in uppercase and a hyphen is added after the fourth and 10th symbol of unique generated code. (If you will need to delete it, select all symbols at once and click on "Delete" keyboard button).

--- a/cafeversity/languages/by.json
+++ b/cafeversity/languages/by.json
@@ -274,6 +274,137 @@
             },
             "settings": "Налады",
             "exit": "Выхад"
+        },
+        "AdminHeaderOptions": {
+            "dashboard": "Панэль Кіравання Адміна",
+            "usersPanel": "Панэль Карыстальнікаў"
+        }
+    },
+    "AdminPageSetUps": {
+        "3_blocks": {
+            "personData": {
+                "name": "Асабістыя Дадзеныя",
+                "fullname": "Імя",
+                "telephone": "Тэлефон",
+                "languagesList": "Мовы",
+                "pageLanguage": "Мова Старонкак",
+                "messages": {
+                    "language": {
+                        "positive": "Мова абноўлена.",
+                        "negative": "Памылка абнаўлення мовы!"
+                    },
+                    "photo": {
+                        "positive": "Фотаздымак абноўлены.",
+                        "neutral": "Шаблон фотаздымку адміну ўсталяваны.",
+                        "negative": "Не атрымалася абнавіць фотаздымак!"
+                    },
+                    "photoFile": {
+                        "uploading": {
+                            "positive": "Новы фотаздымак запампаваны.",
+                            "negative": "Не ўдалося запампаваць новы фотаздымак:"
+                        },
+                        "removing": {
+                            "positive": "Фотаздымак выдалены.",
+                            "negative": "Не атрымалася выдаліць фотаздымак:"
+                        }
+                    },
+                    "fullname": {
+                        "positive": "Поўнае імя абноўлена.",
+                        "negative": "Не атрымалася абнавіць поўнае імя!"
+                    },
+                    "telephone": {
+                        "positive": "Нумар тэлефону абноўлены.",
+                        "negative": "Не атрымалася абнавіць нумар тэлефону!"
+                    }
+                },
+                "buttons": {
+                    "save": "Захаваць",
+                    "delete": "Выдаліць",
+                    "upload": "Запампаваць",
+                    "edit": "Рэдагаваць"
+                },
+                "saveChangesDialog": {
+                    "title": "Захаванне Новых Дадзеных",
+                    "text": "Ці згодны вы захаваць абноўленыя даныя?",
+                    "buttons": {
+                        "yes": "Так",
+                        "no": "Не"
+                    }
+                }
+            },
+            "security": {
+                "name": "Ўваход & Бяспека",
+                "email": "E-пошта",
+                "password": "Пароля",
+                "passwordTip": "Каб змяніць паролю, атрымайце доступ і двойчы ўвядзіце новую паролю.",
+                "secretWord": "Таемнае Слова",
+                "tokenPlaceholder": "Увядзіце Токен...",
+                "passwordPlaceholder": "Увядзіце сваю новую паролю",
+                "repeatPasswordPlaceholder": "Паўтарыце новую паролю",
+                "messages": {
+                    "email": {
+                        "positive": "Новы адрас электроннай пошты захаваны.",
+                        "negative": "Немагчыма захаваць новы адрас электроннай пошты."
+                    },
+                    "emailStatus": {
+                        "confirmed": "Пацверджана",
+                        "unconfirmed": "Не Пацверджана"
+                    },
+                    "password": {
+                        "positive": "Новая пароля ўсталявана.",
+                        "negative": "Немагчыма захаваць новую паролю.",
+                        "mistakes": {
+                            "different": "Паролі не супадаюць!",
+                            "short": "Пароля павінна быць не менш за 8 сімвалаў!"
+                        }
+                    },
+                    "secretWord": {
+                        "positive": "Новае таемнае слова захавана.",
+                        "negative": "Немагчыма захаваць новае таемнае слова."
+                    },
+                    "access": {
+                        "confirmed": "Доступ пацверджаны!",
+                        "denied": "Доступ забаронены!",
+                        "get": "Атрымаць Доступ",
+                        "granted": "Доступ Дазволены"
+                    },
+                    "confirmLetter": {
+                        "sent": "Ліст з пацвярджэннем быў адпраўлены на вашу электронную пошту:",
+                        "problem": "Нешта пайшло не так... Калі ласка, праверце функцыю «letterForEmailConfirmation»."
+                    },
+                    "isEmailConfirmed": {
+                        "yes": "Ваш адрас электроннай пошты пацверджаны!",
+                        "no": "Няправільны токен! Паўтарыце спробу."
+                    }
+                },
+                "buttons": {
+                    "confirm": "Пацвердзіць",
+                    "save": "Захаваць",
+                    "change": "Змяніць"
+                },
+                "dialogs": {
+                    "saveChangesDialog": {
+                        "title": "Захаванне Новых Дадзеных",
+                        "text": "Ці згодны вы захаваць абноўленыя даныя?",
+                        "buttons": {
+                            "yes": "Так",
+                            "no": "Не"
+                        }
+                    },
+                    "getAccessDialog": {
+                        "title": "Доступ да Зменаў",
+                        "text": "Перш чым працягнуць, калі ласка, увядзіце сваю паролю:",
+                        "inputLabel": "Пароля",
+                        "buttons": {
+                            "confirm": "Пацвердзіць",
+                            "close": "Зачыніць"
+                        }
+                    }
+                }
+            },
+            "roles": {
+                "name": "Ролі Адмінаў (Табліца)"
+            }
         }
     }
 }
