--- a/cafeversity/languages/en.json
+++ b/cafeversity/languages/en.json
@@ -274,6 +274,137 @@
             },
             "settings": "Settings",
             "exit": "Sign Out"
+        },
+        "AdminHeaderOptions": {
+            "dashboard": "Admin Dashboard",
+            "usersPanel": "Users Panel"
+        }
+    },
+    "AdminPageSetUps": {
+        "3_blocks": {
+            "personData": {
+                "name": "Personal Data",
+                "fullname": "Name",
+                "telephone": "Telephone",
+                "languagesList": "Languages",
+                "pageLanguage": "Pages' Language",
+                "messages": {
+                    "language": {
+                        "positive": "Language is updated.",
+                        "negative": "Language update failed!"
+                    },
+                    "photo": {
+                        "positive": "Photo is updated.",
+                        "neutral": "Admin's Template Photo is set.",
+                        "negative": "Photo update failed!"
+                    },
+                    "photoFile": {
+                        "uploading": {
+                            "positive": "The new photo is uploaded.",
+                            "negative": "The new photo upload failed:"
+                        },
+                        "removing": {
+                            "positive": "The photo is removed.",
+                            "negative": "The photo removing failed:"
+                        }
+                    },
+                    "fullname": {
+                        "positive": "Fullname is updated.",
+                        "negative": "Fullname update failed!"
+                    },
+                    "telephone": {
+                        "positive": "Telephone number is updated.",
+                        "negative": "Telephone number update failed!"
+                    }
+                },
+                "buttons": {
+                    "save": "Save",
+                    "delete": "Delete",
+                    "upload": "Upload",
+                    "edit": "Edit"
+                },
+                "saveChangesDialog": {
+                    "title": "Saving New Data",
+                    "text": "Are you agreed to save an updated datum?",
+                    "buttons": {
+                        "yes": "Yes",
+                        "no": "No"
+                    }
+                }
+            },
+            "security": {
+                "name": "Login & Security",
+                "email": "Email",
+                "password": "Password",
+                "passwordTip": "To change your password, get access and input the new one twice.",
+                "secretWord": "Secret Word",
+                "tokenPlaceholder": "Input the Token...",
+                "passwordPlaceholder": "Input your new password",
+                "repeatPasswordPlaceholder": "Repeat your new password",
+                "messages": {
+                    "email": {
+                        "positive": "The new email address is saved.",
+                        "negative": "It is impossible to save the new email address."
+                    },
+                    "emailStatus": {
+                        "confirmed": "Confirmed",
+                        "unconfirmed": "Not Confirmed"
+                    },
+                    "password": {
+                        "positive": "The new password is set.",
+                        "negative": "It is impossible to save the new password.",
+                        "mistakes": {
+                            "different": "Passwords don't match!",
+                            "short": "Password must be at least 8 characters!"
+                        }
+                    },
+                    "secretWord": {
+                        "positive": "The new secret word is saved.",
+                        "negative": "It is impossible to save the new secret word."
+                    },
+                    "access": {
+                        "confirmed": "Access is confirmed!",
+                        "denied": "Access is denied!",
+                        "get": "Get Access",
+                        "granted": "Access Granted"
+                    },
+                    "confirmLetter": {
+                        "sent": "The confirmation letter has been sent on your email:",
+                        "problem": "Something went wrong... Please, check the 'letterForEmailConfirmation' function."
+                    },
+                    "isEmailConfirmed": {
+                        "yes": "Your email is confirmed!",
+                        "no": "Wrong token! Please, try again."
+                    }
+                },
+                "buttons": {
+                    "confirm": "Confirm",
+                    "save": "Save",
+                    "change": "Change"
+                },
+                "dialogs": {
+                    "saveChangesDialog": {
+                        "title": "Saving New Data",
+                        "text": "Are you agreed to save an updated datum?",
+                        "buttons": {
+                            "yes": "Yes",
+                            "no": "No"
+                        }
+                    },
+                    "getAccessDialog": {
+                        "title": "Access for Changes",
+                        "text": "Before you will continue, please, input your password:",
+                        "inputLabel": "Password",
+                        "buttons": {
+                            "confirm": "Confirm",
+                            "close": "Close"
+                        }
+                    }
+                }
+            },
+            "roles": {
+                "name": "Admins' Roles (Table)"
+            }
         }
     }
 }
