This is the one of the biggest commit during the project development process.
I have added "menu" page's components and special page for watching a choisen dish in details. Now you can add or remove dishes from your favourite dishes list on the main page.

The first time Prisma ORM has created more than 4 table models and now it's very developed and interesting app's relational database.

Many optional details from pages' appearance have been deleted, a few of them have been hidden for possible future updates.

And many other things I have done since the last previous commit.

--- a/cafeversity/languages/by.json
+++ b/cafeversity/languages/by.json
@@ -242,7 +242,7 @@
             "name": "Выгляд Старонкі",
             "subtitle1": {
                 "name": "Мова",
-                "mainQuestion": "Абяры сваю родную мову: "
+                "mainQuestion": "Абяры сваю мову: "
             },
             "subtitle2": {
                 "name": "Рэжым Старонцы",
@@ -287,7 +287,7 @@
                 "fullname": "Імя",
                 "telephone": "Тэлефон",
                 "languagesList": "Мовы",
-                "pageLanguage": "Мова Старонкак",
+                "pageLanguage": "Мова Старонак",
                 "messages": {
                     "language": {
                         "positive": "Мова абноўлена.",
