--- a/cafeversity/languages/cz.json
+++ b/cafeversity/languages/cz.json
@@ -242,7 +242,7 @@
             "name": "Vzhled Stránky",
             "subtitle1": {
                 "name": "Jazyk",
-                "mainQuestion": "Vyber si svůj rodný jazyk: "
+                "mainQuestion": "Vyber si svůj jazyk: "
             },
             "subtitle2": {
                 "name": "Témata Interfacu",
