--- a/cafeversity/languages/en.json
+++ b/cafeversity/languages/en.json
@@ -32,19 +32,19 @@
     "GreetingPage": {
         "slidesText": {
             "slide1": {
-                "line1": "The first line: Lorem, ipsum dolor.",
-                "line2": "The second line: Lorem ipsum dolor sit amet.",
-                "line3": "The third line: Lorem ipsum dolor sit."
+                "line1": "Various dishes of Belarusian cuisine.",
+                "line2": "Ability to customize dishes according to diets.",
+                "line3": "Actual dishes in details."
             },
             "slide2": {
-                "line4": "The fourth line: Lorem, ipsum dolor.",
-                "line5": "The fifth line: Lorem ipsum dolor sit amet.",
-                "line6": "The sixth line: Lorem ipsum dolor sit."
+                "line4": "All dishes from all food outlets at your fingertips.",
+                "line5": "Make your order and choose the best time for arriving.",
+                "line6": "Take a look at the menu to find what you like."
             },
             "slide3": {
-                "line7": "The seventh line: Lorem, ipsum dolor.",
-                "line8": "The eighth line: Lorem ipsum dolor sit amet.",
-                "line9": "The nineth line: Lorem ipsum dolor sit."
+                "line7": "Cooking of dishes meets the highest hygienic standards.",
+                "line8": "100 percent correspondence between expectations and reality.",
+                "line9": "Quality food products and great flavors."
             }
         },
         "bottomButtons": {
