Small changes in localization details for admin charts' names

--- a/cafeversity/languages/by.json
+++ b/cafeversity/languages/by.json
@@ -367,6 +367,12 @@
             "cafesPanel": "Панель Кафэ",
             "dishesPanel": "Панель Страў",
             "ordersPanel": "Панель Замоў"
+        },
+        "ChartsNames": {
+            "chart1": "Папулярнасць страў адносна іх сустракаемасці ў замовах",
+            "chart2": "Колькасць страў па тыпах рацыёну",
+            "chart3": "Колькасць страў па катыгорыях",
+            "chart4": "Прыбытак усіх кафэ"
         }
     },
     "AdminPageSetUps": {
